// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.marketplaces getMarketplaces should ignore marketplaces without an API endpoint 1`] = `
Array [
  Object {
    "code": "fr",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "code": "uk",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "code": "de",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "code": "es",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "code": "it",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "vendorId": "A11IL2PNWYJU7H",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of eu marketplaces 1`] = `
Array [
  Object {
    "code": "de",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "code": "es",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "code": "fr",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "code": "it",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "vendorId": "A11IL2PNWYJU7H",
  },
  Object {
    "code": "uk",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "code": "tr",
    "domain": "amazon.com.tr",
    "id": "A33AVAJ2PDY3EV",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Turkey",
    "region": "eu",
    "vendorId": "A1UNQM1SR2CHM",
  },
  Object {
    "code": "eg",
    "id": "ARBP9OOSHTCHU",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Egypt",
    "region": "eu",
  },
  Object {
    "code": "sa",
    "domain": "amazon.com.sa",
    "id": "A17E79C6D8DWNP",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Saudi Arabia",
    "region": "eu",
  },
]
`;
